@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $bconf = SPVM::Builder::Config->new_default;
+my $bconf = SPVM::Builder::Config->new_c99;
 $bconf->add_extra_compiler_flags('-fopenmp');
 $bconf->add_extra_linker_flags('-lgomp');
 
