@@ -2,6 +2,6 @@ use strict;
 use warnings;
 
 use SPVM::Builder::Config;
-my $bconf = SPVM::Builder::Config->new_default;
+my $bconf = SPVM::Builder::Config->new_c99;
 
 $bconf;
