@@ -3,7 +3,7 @@ use warnings;
 
 use SPVM::Builder::Config;
 
-my $bconf = SPVM::Builder::Config->new_default;
+my $bconf = SPVM::Builder::Config->new_c99;
 
 $bconf->set_config(optimize => '-O2');
 
